--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,28 +14,28 @@
         </div>
         <div id="count">
             <section id="elements">
-                <button class="btn" data-number>AC</button>
-                <button class="btn" data-number>nada</button>
-                <button class="btn" data-number>=</button>
-                <button class="btn" data-number>back</button>
-                <button class="btn" data-number>,</button>
-                <button class="btn" data-number>0</button>
-                <button class="btn" data-number>1</button>
-                <button class="btn" data-number>2</button>
-                <button class="btn" data-number>3</button>
-                <button class="btn" data-number>4</button>
-                <button class="btn" data-number>5</button>
-                <button class="btn" data-number>6</button>
-                <button class="btn" data-number>7</button>
-                <button class="btn" data-number>8</button>
+                <button class="btn result" id="result">=</button>
+                <button class="btn nt"></button>
+                <button class="btn clear" id="clear">AC</button>
                 <button class="btn" data-number>9</button>
+                <button class="btn" data-number>8</button>
+                <button class="btn" data-number>7</button>
+                <button class="btn" data-number>6</button>
+                <button class="btn" data-number>5</button>
+                <button class="btn" data-number>4</button>
+                <button class="btn" data-number>3</button>
+                <button class="btn" data-number>2</button>
+                <button class="btn" data-number>1</button>
+                <button class="btn zero" data-number>0</button>
+                <button class="btn" id="bkspc">back</button>
+                <button class="btn">,</button>
             </section>
             <section id="operations">
-                <button class="btn-opr" id="sum"></button>
-                <button class="btn-opr" id="sub"></button>
-                <button class="btn-opr" id="mult"></button>
-                <button class="btn-opr" id="div"></button>
-                <button class="btn-opr" id="rem"></button>
+                <button class="btn opr" id="sum">+</button>
+                <button class="btn opr" id="sub">-</button>
+                <button class="btn opr" id="mult">x</button>
+                <button class="btn opr" id="div">/</button>
+                <button class="btn opr" id="rem">%</button>
             </section>
         </div>
     </div>
