--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -28,7 +28,7 @@
                 <button class="btn" data-number>1</button>
                 <button class="btn zero" data-number>0</button>
                 <button class="btn" id="bkspc">back</button>
-                <button class="btn">,</button>
+                <button class="btn" id="pt">.</button>
             </section>
             <section id="operations">
                 <button class="btn opr" id="sum">+</button>
